# fancytail

./: .git-pre-commit-hook  CONTRIBUTING.rst  HISTORY.rst  README.rst  build.sh  plan.md  pyproject.toml
docs/: Makefile
docs/source/: Introduction.rst  conf.py  index.rst
fancytail/: __init__.py  cli.py  fancytail.py  logger.py  testing_helper.py
tests/: test_fancytail.py
