[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fancytail"
authors = [
    {name = "Stig-Arne Grönroos", email="stig.gronroos@gmail.com"}
]
readme = "README.rst"
license = "MIT"
dynamic = ["version", "description"]
classifiers = [ "Development Status :: 4 - Beta",
                "Intended Audience :: Science/Research",
                "Operating System :: OS Independent",
                "Programming Language :: Python",
                "Topic :: Scientific/Engineering",
                "Private :: Do Not Upload", ]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[project.urls]
Documentation = "https://fancytail.readthedocs.io"
Source = "https://github.com/waino/fancytail"

[project.scripts]
fancytail = "fancytail:main"

[tool.pytest.ini_options]
addopts = "-v --cov=fancytail --cov-report html --ignore-glob docs/**"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.1",
    "flit>=3.12.0",
    "ipython>=8.37.0",
    "mypy>=1.16.1",
    "mypy-extensions>=1.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
    "sphinx>=8.1.3",
]
